--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav class="nav">
             <ul>
                 <li class="title"><a href="index.html"><img class ="icon" src="resource\icon.png"><span class="titlespan">MUCKBANG&H</span></a></li>
-                <li class="menu"><a href="sub1.html">SUB1</a></li>
-                <li class="menu"><a href="sub2.html">SUB2</a></li>
+                <li class="menu"><a href="sub1.html">소개</a></li>
+                <li class="menu"><a href="sub2.html">추천</a></li>
             </ul>
         </nav>
         <section class="main">
