--- a/sub2.html
+++ b/sub2.html
@@ -16,8 +16,8 @@
         <ul>
             <li class="title"><a href="index.html"><img class="icon" src="resource\icon.png"><span
                         class="titlespan">MUCKBANG&H</span></a></li>
-            <li class="menu"><a href="sub1.html">SUB1</a></li>
-            <li class="menu"><a href="sub2.html">SUB2</a></li>
+            <li class="menu"><a href="sub1.html">소개</a></li>
+            <li class="menu"><a href="sub2.html">추천</a></li>
         </ul>
     </nav>
     <section class="sub2">
