--- a/sub1.html
+++ b/sub1.html
@@ -61,6 +61,7 @@
                 </div>
             </div>
         </div>
+        <input type="button" id ="totop" value="TOP" onclick="javascript:window.scrollTo(0,0)"/>
     </div>
     </section>
     <footer class="footer">
